fix to scale images on smaller displays

--- a/blog_app/static/blog_app/css/article-detail.css
+++ b/blog_app/static/blog_app/css/article-detail.css
@@ -35,3 +35,11 @@ flex-direction: column;
     margin-top: 3em;
     margin-bottom: 3em;
 }
+
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* optional: to center the image */
+}
